removed link to andrea's resume

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="row">
           <div class="col-md-12">
             <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/320277955&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-            <p>Track 1: Interactive resume created for a class project. The subject of the resume is Andrea Tuccillo, a classmate of mine, for a potential podcast position. A full form web version of the resume, with an embedded player, is hosted on Github pages can be found <a href="https://shaankastuar.github.io/TNS_Andrea_Resume/">here.</a> As such, the resume is presented in the format of a podcast. Original intro music composition and audio editing performed in Ableton Live 9.<br><br>Track 2: Accompaniment to a visual narrative that can be located <a src="https://shaankastuar.tumblr.com/post/15143082…ting-a-visual">here.</a>A light-hearted narrative, told through audio and still photographs, about completing a school project. I attempted to capture a quizzical, "thinking" feel by using jazz guitar and freeform drums. Created in Ableton Live 9.</p>
+            <p>Track 1: Interactive resume created for a class project. The subject of the resume is Andrea Tuccillo, a classmate of mine, for a potential podcast position. As such, the resume is presented in the format of a podcast. Original intro music composition and audio editing performed in Ableton Live 9.<br><br>Track 2: Accompaniment to a visual narrative that can be located <a src="https://shaankastuar.tumblr.com/post/15143082…ting-a-visual">here.</a>A light-hearted narrative, told through audio and still photographs, about completing a school project. I attempted to capture a quizzical, "thinking" feel by using jazz guitar and freeform drums. Created in Ableton Live 9.</p>
           </div>
         </div class="row"><br><br>
           <div class="row" class="content-section music-section">
@@ -493,3 +493,7 @@ missing wallet : https://vimeo.com/191088713 -->
 
 <!--  https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/311058209&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true
  -->
+
+<!--  in case you want to show andrea resume full site
+
+ A full form web version of the resume, with an embedded player, is hosted on Github pages can be found <a href="https://shaankastuar.github.io/TNS_Andrea_Resume/">here.</a> -->
